--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.adaptiveperformance.google.android": "5.1.5",
     "com.unity.burst": "1.8.21",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.ext.nunit": "2.0.5",
